# Fast-survey

./: .gitignore  Options.txt  README.md  app.js  index.html  manifest.webmanifest  output.html  output.js  pyproject.toml  styles.css  sw.js
app/: main.py
data/: mapping.json  options.txt  pricebook.json
fastapi/: __init__.py  responses.py  testclient.py
httpx/: __init__.py  _client.py  _types.py
js/: gpt-all-13.js  notes-api-client.js  notes-engine.js
lib/: jspdf.umd.min.js  jszip.min.js
tests/: conftest.py  test_app.py
