[project]
name = "fast-survey"
version = "0.2.0"
description = "Survey API kata with an in-repo FastAPI shim"
authors = [{name = "Fast Survey"}]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
