[project]
name = "fast-survey"
version = "0.1.0"
description = "Survey API kata powered by FastAPI"
authors = [{name = "Fast Survey"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
